# miyagi

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md  commands.azcli  miyagi.sln
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: 001-cloud-infra-provisioning-pipeline.yml  002-kubernetes-infra-provisioning-pipeline.yaml  expense-service-container-build.yml  frontend-container-build.yml  kubernetes-infrastructure-ingress-nginx-pipeline.yaml  memory-service-container-build.yml  order-service-container-build.yml  terraform-pipeline.yml  user-service-container-build.yml
agents/: README.md
agents/autogen/service-template/: .gitignore  Dockerfile  README.md  docker-compose-services.yml  docker-compose.yml  pyproject.toml
agents/autogen/service-template/app/: main.py
agents/autogen/service-template/app/worker/: celery_app.py  celery_worker.py
deploy/: README.md
docs/: README.MD
dotnet/: Miyagi.sln
frontend/: .gitignore  README.md  package.json  react-table-config.d.ts  tailwind.config.js
infrastructure/: README.md
memory-service/: README.md  docker-compose.yaml  main.py  requirements.txt  setup.py
services/: Miyagi.sln  README.md
services/chatgpt-plugin/python/: .gitignore  README.md  pyproject.toml
services/chatgpt-plugin/python/.well-known/: ai-plugin.json
services/chatgpt-plugin/python/server/: main.py  openapi.yaml
ui-nextjs/: .gitignore  Dockerfile  Dockerfile.multistage  Dockerfile.standalone  README.md  declaration.d.ts  next.config.js  next.d.ts  package.json
user-service/: .gitignore  README.md  pom.xml
(+910 files in other folders)
