[tool.poetry]
name = "autogen-service-template"
version = "0.1.0"
description = "Autogen service wtih FastAPI and Celery"
authors = ["Govind K <gok@microsoft.com>"]

[tool.poetry.dependencies]
python = "3.12.3"
flake8 = "^7.0.0"
fastapi = "^0.110.2"
hypercorn = "^0.16.0"
celery = "^5.4.0"
redis = "^5.0.4"

[tool.poetry.dev-dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry>=1.8.2"]
build-backend = "poetry.masonry.api"
