[tool.poetry]
name = "finance-plugin"
version = "0.1.0"
description = ""
authors = ["Govind <gok@microsoft.com>"]
readme = "README.md"
packages = [{include = "server"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
openai = "^0.27.5"
python-dotenv = "^0.21.1"
pydantic = "^1.10.5"
tenacity = "^8.2.1"
tiktoken = "^0.4.0"
numpy = "^1.24.2"
azure-identity = "^1.12.0"
python-multipart = "^0.0.6"
#azure-search-documents = {version = "11.4.0a20230509004", source = "azure-sdk-dev"}
qdrant-client = {version = "^1.0.4", python = "<3.12"}
redis = "4.5.1"
fmpsdk = "^20230312.0"

[tool.poetry.scripts]
start = "server.main:start"
dev = "server.main:start"
